// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`evaluates component interpolations 1`] = `
"const styled = require('../styled');

const Title = styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\"
});
const Paragraph = styled.component('p', {
  name: \\"Paragraph\\",
  class: \\"Paragraph_p1ugh8t9\\"
});

/*
CSS OUTPUT START
.Title_t1ugh8t9{color:red;}
.Paragraph_p1ugh8t9 .Title_t1ugh8t9{color:blue;}

CSS OUTPUT END

CSS MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":3,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"},{\\"generated\\":{\\"line\\":2,\\"column\\":0},\\"original\\":{\\"line\\":7,\\"column\\":6},\\"name\\":\\"Paragraph_p1ugh8t9\\"}]
*/"
`;

exports[`evaluates expressions with dependencies 1`] = `
"const slugify = require('../slugify');

const Title = styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\"
});

/*
CSS OUTPUT START
.Title_t1ugh8t9:before{content:\\"6og6jy\\";}

CSS OUTPUT END

CSS MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":3,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
*/"
`;

exports[`evaluates expressions with expressions depending on shared expression 1`] = `
"const slugify = require('../slugify');

const boo = t => slugify(t) + 'boo';

const too = t => slugify(t) + 'too';

const Title = styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\"
});

/*
CSS OUTPUT START
.Title_t1ugh8t9:before{content:\\"6og6jyboo6og6jytoo\\";}

CSS OUTPUT END

CSS MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":6,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
*/"
`;

exports[`evaluates identifier in scope 1`] = `
"const answer = 42;

const foo = () => answer;

const days = foo() + ' days';
const Title = styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\"
});

/*
CSS OUTPUT START
.Title_t1ugh8t9:before{content:\\"42 days\\";}

CSS OUTPUT END

CSS MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":5,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
*/"
`;

exports[`evaluates local expressions 1`] = `
"const answer = 42;

const foo = () => answer;

const Title = styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\"
});

/*
CSS OUTPUT START
.Title_t1ugh8t9:before{content:\\"42 days\\";}

CSS OUTPUT END

CSS MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":4,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
*/"
`;

exports[`ignores external expressions 1`] = `
"const generate = props => props.content;

const Title = styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\",
  vars: {
    \\"t1ugh8t9-0-0\\": generate
  }
});

/*
CSS OUTPUT START
.Title_t1ugh8t9:before{content:\\"var(--t1ugh8t9-0-0)\\";}

CSS OUTPUT END

CSS MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":3,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
*/"
`;

exports[`ignores inline arrow function expressions 1`] = `
"const Title = styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\",
  vars: {
    \\"t1ugh8t9-0-0\\": props => props.content
  }
});

/*
CSS OUTPUT START
.Title_t1ugh8t9:before{content:\\"var(--t1ugh8t9-0-0)\\";}

CSS OUTPUT END

CSS MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
*/"
`;

exports[`ignores inline vanilla function expressions 1`] = `
"const Title = styled.component('h1', {
  name: \\"Title\\",
  class: \\"Title_t1ugh8t9\\",
  vars: {
    \\"t1ugh8t9-0-0\\": function (props) {
      return props.content;
    }
  }
});

/*
CSS OUTPUT START
.Title_t1ugh8t9:before{content:\\"var(--t1ugh8t9-0-0)\\";}

CSS OUTPUT END

CSS MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Title_t1ugh8t9\\"}]
*/"
`;
